--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,35 +1,42 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Flats</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Description</th>
-      <th>Price per night</th>
-      <th>Numbr of guests</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-12">
+      <h1>Tout vos Flats</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <p>You search for <strong></strong>. We found 5 flats out of our 5 on our website.</p>
+    </div>
+  </div>
+  <div class="row">
     <% @flats.each do |flat| %>
-      <tr>
-        <td><%= flat.name %></td>
-        <td><%= flat.address %></td>
-        <td><%= flat.description %></td>
-        <td><%= flat.price_per_night %></td>
-        <td><%= flat.numbr_of_guests %></td>
-        <td><%= link_to 'Show', flat %></td>
-        <td><%= link_to 'Edit', edit_flat_path(flat) %></td>
-        <td><%= link_to 'Destroy', flat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Flat', new_flat_path %>
+    <div class="col-4">
+      <div class="flat-card-image"></div>
+        <div class="flat-card-content">
+          <div class="flat-card-title">
+            <h4><%= flat.name %></h4>
+          </div>
+          <p><%= flat.address %></p>
+          <div class="flex">
+            <div class="flex">
+              <i class="fas fa-user-friends icons"></i>
+              <span><%= flat.numbr_of_guests %></span>
+            </div>
+            <div class="flex ml-3">
+              <i class="fas fa-euro-sign icons"></i>
+              <%= flat.price_per_night %>
+            </div>
+          </div>
+          <div class="flat-card-actions">
+              <%= link_to 'More info', flat %>
+              <%= link_to 'Edit', edit_flat_path(flat), class:"ml-3 text-warning" %>
+              <%= link_to 'Destroy', flat, method: :delete, data: { confirm: 'Are you sure?' }, class:"ml-3 text-danger" %>
+          </div>
+        </div>
+      </div>
+      <% end %>
+  </div>
+</div>
